Version 0.6 - 2014-07-08

* Fix nested inheritances: inheritance of content in an inheritance
* Add new node type inheritance_node to improve inheritance management
  * Allow more information of inheritance (which could be used when HTML is
    generated)
  * Better and clear management of inheritances (introduced nodes)

Version 0.5 - 2013-06-04
* Fix #2: inherit two modules at same inheritref
* Fix node generation for 'title' and 'section' inheritref node types.
* Fix #3: fixed default inheritance_pattern expression to support well multiple
  inheritances in the same file and to allow '_' in the prefix of inheritance

Version 0.4 - 2013-02-25
* Support of multiple inheritance over the same inherit reference.
* Regenerate ToC of pages after apply inheritance.
* Support of explicit inherit references.

Version 0.3 and previous
* Initial release
